# movie-ticketing-system

./: 404.html  CNAME  Procfile  README.md  index.html  requirements.txt
assets/: index-294-HjEZ.js  index-4e8iF3yC.js  index-BGAnj_LI.js  index-BeovCZCP.js  index-BzLuKmqX.js  index-CfdBPXFT.js  index-D_L771WS.css  index-DkvVTLHa.js  index-LB6GlbXc.css  index-gc0DeKCn.css  index-lRYCSy5e.js
backend/: dev.db  main.py  pyproject.toml
backend/app/api/: exception_handlers.py
backend/app/api/v1/: admin.py  tickets.py
backend/app/core/: exceptions.py  logging.py
backend/app/db/: __init__.py  get_db.py
backend/app/depends/: __init__.py  get_api_cookie.py  require_role.py
backend/app/models/: __init__.py  attendance.py  event.py  payment.py  ticket.py  ticket_type.py  user.py
backend/app/models/base/: __init__.py  component_base.py
backend/app/notifications/email/: __init__.py  email_service.py
backend/app/notifications/email/provider/: base.py  smtp.py
backend/app/notifications/email/templates/: base.html  ticket.html
backend/app/repositories/: __init__.py  attendance_repository.py  payment_repository.py  ticket_repository.py  user_repository.py
backend/app/schemas/: __init__.py  payment.py  ticket.py  user.py
backend/app/security/: __init__.py  password.py  token_manager.py
backend/app/services/: __init__.py  mpesa_service.py  qr_service.py  ticket_service.py  user_service.py
backend/app/settings/: __init__.py  settings.py
backend/app/utils/: __init__.py  cache_manager.py  otp.py  phone.py
backend/app/utils/enums/: __init__.py  cache_name_spaces.py  payment_status.py  role_enum.py  ticket_status.py  ticket_type.py  token_type.py
backend/app/validators/: __init__.py  checks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/admin/: AttendanceTable.jsx  QRScanner.jsx
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/ticket/: OrderSummary.jsx  ProcessingOverlay.jsx  Steps.jsx  TicketCard.jsx  TicketTypeSelector.jsx
frontend/src/components/ui/: Alert.jsx  Button.jsx  Card.jsx  FormField.jsx  MUTCUEmblem.jsx  Spinner.jsx
frontend/src/hooks/: useTicketForm.js
frontend/src/pages/: BuyTicketPage.jsx  HomePage.jsx  SendTicketPage.jsx
frontend/src/pages/admin/: AdminDashboardPage.jsx  AdminLoginPage.jsx
